--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-.vercel
-*.log
-*.pyc
-__pycache__
-db.sqlite3
-media
+venv/
+env/
+.env
 
-# Environments 
-.env 
-.venv 
-env/ 
-venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
+.vscode
+
+db.sqlite3
+
+_pycache_/
+*.pyc
+*.pyo
+*.pyd
